# sim

./: .gitignore  CMakeLists.txt
DRAMsim3/: .nfs000000000001032000000016  CMakeLists.txt  Makefile  _OldCMakeLists.txt
DRAMsim3/benchmarks/: benchmark_banks.sh
DRAMsim3/configs/: DDR4_8Gb_x8_3200.ini  DDR5_32Gb_x4_4800.ini  DDR5_32Gb_x4_4800_norfm.ini
DRAMsim3/scripts/: trace_gen.py
DRAMsim3/src/: bankstate.cc  bankstate.h  channel_state.cc  channel_state.h  command_queue.cc  command_queue.h  common.cc  common.h  configuration.cc  configuration.h  controller.cc  controller.h  covert_channel.cc  cpu.cc  cpu.h  dram_system.cc  dram_system.h  dramsim3.h  memory_system.cc  memory_system.h  refresh.cc  refresh.h  simple_stats.cc  simple_stats.h  thermal.cc  thermal_replay.cc  timing.cc  timing.h
ds3conf/: make_ini.py
ds3conf/archived/mirza/: DDR5_32Gb_x4_4800_mop4_gth0.5k.ini  DDR5_32Gb_x4_4800_mop4_gth1k.ini  DDR5_32Gb_x4_4800_mop4_gth2k.ini  DDR5_32Gb_x4_4800_mop4_gth4k.ini  DDR5_32Gb_x4_4800_mop4_nomirza.ini  DDR5_32Gb_x4_4800_mop4cp_gth0.5k.ini  DDR5_32Gb_x4_4800_mop4cp_gth1k.ini  DDR5_32Gb_x4_4800_mop4cp_gth2k.ini  DDR5_32Gb_x4_4800_mop4cp_gth4k.ini
ds3conf/archived/mirza_sensitivity_groupth/: DDR5_32Gb_x4_4800_mop4_gth600.ini  DDR5_32Gb_x4_4800_mop4_gth800.ini  DDR5_32Gb_x4_4800_mop4cp_gth600.ini  DDR5_32Gb_x4_4800_mop4cp_gth800.ini
ds3conf/archived/mirza_sensitivity_qsize/: DDR5_32Gb_x4_4800_mop4_qsize2.ini  DDR5_32Gb_x4_4800_mop4_qsize8.ini  DDR5_32Gb_x4_4800_mop4cp_qsize2.ini  DDR5_32Gb_x4_4800_mop4cp_qsize8.ini
ds3conf/archived/mirza_sensitivity_qth/: DDR5_32Gb_x4_4800_mop4_qth32.ini  DDR5_32Gb_x4_4800_mop4_qth8.ini  DDR5_32Gb_x4_4800_mop4cp_qth32.ini  DDR5_32Gb_x4_4800_mop4cp_qth8.ini
ds3conf/archived/moat/: DDR5_32Gb_x4_4800_ABO128.ini  DDR5_32Gb_x4_4800_ABO128_coffeelake_cp.ini  DDR5_32Gb_x4_4800_ABO64.ini  DDR5_32Gb_x4_4800_ABO64_coffeelake_cp.ini  DDR5_32Gb_x4_4800_NoABO.ini  DDR5_32Gb_x4_4800_NoABO_coffeelake_cp.ini
ds3conf/archived/page_closure/: DDR5_32Gb_x4_4800_mop4_scp.ini  DDR5_32Gb_x4_4800_mop4cp.ini
ds3conf/archived/pagemap_amap/: DDR5_32Gb_x4_4800_norfm.ini  DDR5_32Gb_x4_4800_norfm_coffeelake.ini  DDR5_32Gb_x4_4800_norfm_coffeelake_cp.ini  DDR5_32Gb_x4_4800_norfm_mop1.ini  DDR5_32Gb_x4_4800_norfm_mop1_cp.ini  DDR5_32Gb_x4_4800_norfm_mop2.ini  DDR5_32Gb_x4_4800_norfm_mop2_cp.ini  DDR5_32Gb_x4_4800_norfm_mop4.ini  (+7 more)
ds3conf/ref/: DDR5_32GB_x4_r128.ini  DDR5_32GB_x4_r16.ini  DDR5_32GB_x4_r32.ini  DDR5_32GB_x4_r64.ini  DDR5_32GB_x4_r8.ini  DDR5_32GB_x4_rNONE.ini  make_conf.py
main/: sim.cpp
scripts/: run.py  test_lru_wb.py
src/: cache.h  cache.tpp  core.cpp  core.h  defs.h  os.cpp  os.h
src/cache/: _controller.h  _controller.tpp  controller.h  controller.tpp  replacement.cpp
src/dram/: address.h  address_mapping.cpp  address_mapping.h  bank.cpp  bank.h  channel.cpp  channel.h  config.cpp  config.h  controller.cpp  controller.h  rank.cpp  rank.h  subchannel.cpp  subchannel.h
src/ds3/: interface.cpp  interface.h
src/utils/: argparse.cpp  argparse.h  bitcount.h  timer.h
(+30 files in other folders)
